--- a/PonzianiComponents/Scoresheet.razor
+++ b/PonzianiComponents/Scoresheet.razor
@@ -24,14 +24,43 @@
 				@for (int i = g.Moves.Count; g.Moves.Count < Game.Moves.Count; i += 2)
 				{
 					int moveNumber = g.Position.MoveNumber;
-					@if (Comments && Game.Moves[i].Comment != null && Game.Moves[i].Comment.Length > 0)
+					bool comments = Comments && Game.Moves[i].Comment != null && Game.Moves[i].Comment.Length > 0;
+					bool variations = Variations && Game.Moves[i].Variations != null && Game.Moves[i].Variations.Count > 0;
+					@if (comments || variations)
 					{
 						<tr>
 							<td class="pzNotColMovenumber">@g.Position.MoveNumber</td>
 
 							<td class="pzNotColWhite" @onclick="@(e => SelectMoveAsync(e, moveNumber, Side.WHITE))">@Print(g, i)</td><td  class="pzNotColBlack"></td>
 						</tr>
-						 <tr class="pzComment"><td colspan="3">@Game.Moves[i].Comment</td></tr>
+						@if (variations)
+						{
+							<tr class="pzVariation"><td colspan="3">
+							@{
+								Game vg = (Game)g.Clone();
+								vg.Add(Game.Moves[i]);
+								List<Game> vgames = vg.VariationGames();
+								foreach (var vgame in vgames)
+								{
+									<CascadingValue Value="@Id" Name="Id">
+										<CascadingValue Value="@Comments" Name="Comments">
+											<CascadingValue Value="@Variations" Name="Variations">
+												<CascadingValue Value="@Type">
+													<CascadingValue Value="@OnMoveSelected">
+														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.WHITE" Level="1"></MoveText>
+													</CascadingValue>
+												</CascadingValue>
+											</CascadingValue>
+										</CascadingValue>
+									</CascadingValue>
+								}
+							}
+							</td></tr>
+						}
+						@if (comments)
+						{
+							<tr class="pzComment"><td colspan="3">@Game.Moves[i].Comment</td></tr>
+						}
 						<tr>
 							<td class="pzNotColMovenumber">@g.Position.MoveNumber</td>
 							<td class="pzNotColWhite">...</td>
@@ -48,7 +77,7 @@
 								<td class="pzNotColBlack  pzNotResult">@PGN.ResultToString(Game.Result)</td>
 							}
 						</tr>
-					}
+					} 
 					else
 					{
 						<tr>
@@ -69,11 +98,38 @@
 							}
 						</tr>
 					}
-					@if (Comments && Game.Moves[i+1].Comment != null && Game.Moves[i+1].Comment.Length > 0)
+					comments = Comments && Game.Moves.Count > i+1 && Game.Moves[i+1].Comment != null && Game.Moves[i+1].Comment.Length > 0;
+					variations = Variations && Game.Moves.Count > i+1 && Game.Moves[i+1].Variations != null && Game.Moves[i+1].Variations.Count > 0;
+					@if (comments || variations)
 					{
-						<tr class="pzComment"><td colspan="3">@Game.Moves[i+1].Comment</td></tr>
+						if (variations)
+						{
+							<tr class="pzVariation"><td colspan="3">
+							@{
+								List<Game> vgames = g.VariationGames();
+								foreach (var vgame in vgames)
+								{
+									<CascadingValue Value="@Id" Name="Id">
+										<CascadingValue Value="@Comments" Name="Comments">
+											<CascadingValue Value="@Variations" Name="Variations">
+												<CascadingValue Value="@Type">
+													<CascadingValue Value="@OnMoveSelected">
+														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.BLACK" Level="1"></MoveText>
+													</CascadingValue>
+												</CascadingValue>
+											</CascadingValue>
+										</CascadingValue>
+									</CascadingValue>
+								}
+							}
+							</td></tr>
+						}
+						if (comments)
+						{
+							<tr class="pzComment"><td colspan="3">@Game.Moves[i+1].Comment</td></tr>
+						}
 					}
-		}
+				}
 				@if (g.SideToMove == Side.WHITE)
 				{
 			  <tr> <td class="pzNotColMovenumber">@g.Position.MoveNumber</td><td class="pzNotColWhite pzNotResult">@PGN.ResultToString(Game.Result)</td><td class="pzNotColBlack"></td></tr>
