--- a/PonzianiComponents/Scoresheet.razor
+++ b/PonzianiComponents/Scoresheet.razor
@@ -46,9 +46,11 @@
 										<CascadingValue Value="@Comments" Name="Comments">
 											<CascadingValue Value="@Variations" Name="Variations">
 												<CascadingValue Value="@Type">
+												 <CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.WHITE" Level="1"></MoveText>
 													</CascadingValue>
+												</CascadingValue>
 												</CascadingValue>
 											</CascadingValue>
 										</CascadingValue>
@@ -113,8 +115,10 @@
 										<CascadingValue Value="@Comments" Name="Comments">
 											<CascadingValue Value="@Variations" Name="Variations">
 												<CascadingValue Value="@Type">
+													<CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 													<CascadingValue Value="@OnMoveSelected">
 														<MoveText Game="vgame" MoveNumber="moveNumber" Side="Side.BLACK" Level="1"></MoveText>
+													</CascadingValue>
 													</CascadingValue>
 												</CascadingValue>
 											</CascadingValue>
@@ -146,8 +150,10 @@ else if (Mode == DisplayMode.INLINE)
 			<CascadingValue Value="@Comments" Name="Comments">
 				<CascadingValue Value="@Variations" Name="Variations">
 					<CascadingValue Value="@Type">
+						<CascadingValue Value="@HierarchicalDisplay" Name="HierarchicalDisplay">
 						<CascadingValue Value="@OnMoveSelected">
 							<MoveText Game="Game"></MoveText>
+						</CascadingValue>
 						</CascadingValue>
 					</CascadingValue>
 				</CascadingValue>
