--- a/PonzianiDemo/Pages/ScoresheetDemo.razor
+++ b/PonzianiDemo/Pages/ScoresheetDemo.razor
@@ -3,7 +3,7 @@
 
 @if (game.Moves.Count > 0) {
 <Scoresheet Game="@game" OnMoveSelected="@OnMoveSelected" Mode="@DisplayMode" Type="@model.NotationType" OtherAttributes="@OtherAttributes" Comments="@model.Comments" 
-			Variations ="@model.Variations"/>
+			Variations ="@model.Variations" HierarchicalDisplay="@model.HierarchicalDisplay"/>
 }
 
 <EditForm Model="@model" OnValidSubmit="@HandleValidSubmit">
@@ -39,6 +39,12 @@
 		<InputCheckbox class="form-check-input" @bind-Value="model.Variations" />
 		<label>
 			Show Variations:
+		</label>
+	</div>
+		<div class="form-check">
+		<InputCheckbox class="form-check-input" @bind-Value="model.HierarchicalDisplay" />
+		<label>
+			Hierarchical Display:
 		</label>
 	</div>
 	<div class="form-group">
