Adding Sass for stylesheet generation

--- a/PonzianiComponents/Scoresheet.razor.css
+++ b/PonzianiComponents/Scoresheet.razor.css
@@ -1,57 +1,1 @@
-﻿table.pzNotTable > tbody > tr > td:not(:last-child) {
-    border-right: 1px solid black;
-}
-
-::deep span.pzMoveText {
-    white-space: pre-wrap;
-}
-
-.pzNotTable {
-    border: 1px solid black;
-    overflow: auto;
-}
-
-.pzNotColMovenumber {
-    text-align: center;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-.pzNotColWhite {
-    text-align: right;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 50%;
-}
-.pzNotColBlack {
-    text-align: right;
-    background-color: lightgray;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 50%;
-}
-::deep .pzNotResult {
-    font-weight: bold
-}
-
-::deep .pzMoveTextComment {
-    color: blue;
-}
-
-::deep .pzComment {
-    background-color: #FFEBE4;
-}
-
-::deep .pzVariation {
-    background-color: #EBE4FF;
-}
-
-::deep .pzMoveTextLevel0 {
-    font-weight: bold
-}
-
-::deep p.pzVariation {
-    margin-block-end: 0em;
-}
+table.pzNotTable>tbody>tr>td:not(:last-child){border-right:1px solid black;}::deep span.pzMoveText{white-space:pre-wrap;}.pzNotTable{border:1px solid black;overflow:auto;}.pzNotColMovenumber{text-align:center;padding:3px;padding-left:10px;padding-right:10px;}.pzNotColWhite{text-align:right;padding:3px;padding-left:10px;padding-right:10px;width:50%;}.pzNotColBlack{text-align:right;background-color:lightgray;padding:3px;padding-left:10px;padding-right:10px;width:50%;}::deep .pzNotResult{font-weight:bold;}::deep .pzMoveTextComment{color:blue;}::deep .pzComment{background-color:#FFEBE4;}::deep .pzVariation{background-color:#EBE4FF;}::deep .pzMoveTextLevel0{font-weight:bold;}::deep p.pzVariation{margin-block-end:0em;}
