--- a/PonzianiComponents/Chessboard.razor.css
+++ b/PonzianiComponents/Chessboard.razor.css
@@ -1,1 +1,105 @@
-.pzChessboard{width:400px;height:400px;}.pzChessboardSetup{width:400px;height:500px;}.pzBoard{border:2px solid #404040;box-sizing:border-box;}.pzSquare{float:left;position:relative;-webkit-touch-callout:none;-webkit-user-select:none;-khtml-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.pzDarkSquare{background-color:#b58863;color:#f0d9b5;}.pzLightSquare{background-color:#f0d9b5;color:#b58863;}.pzDarkSquareGrey{background-color:#110c08;color:#8a5e1c;}.pzLightSquareGrey{background-color:#8a5e1c;color:#110c08;}.pzClearfix{clear:both;}.pzNotation{cursor:default;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;font-size:13.33333px;position:absolute;}.pzAlpha{bottom:1px;right:3px;}.pzNumeric{top:2px;left:2px;}.pzHighlightSquare{box-shadow:inset 0 0 3px 3px yellow;}.modal{position:fixed;left:0;top:0;width:100%;height:100%;background-color:rgba(0, 0, 0, 0.5);opacity:0;visibility:hidden;transform:scale(1.1);transition:visibility 0s linear 0.25s,opacity 0.25s 0s,transform 0.25s;}.modal-content{position:absolute;top:50%;left:50%;transform:translate(-50%, -50%);background-color:white;padding:1rem 1.5rem;width:110px;border-radius:0.5rem;}.show-modal{opacity:1;visibility:visible;transform:scale(1);transition:visibility 0s linear 0s,opacity 0.25s 0s,transform 0.25s;display:block;}
+/* Settings relevant for Chessboard component*/
+/* Settings relevant for Scoresheet component*/
+.pzChessboard {
+  width: 400px;
+  height: 400px;
+}
+
+.pzChessboardSetup {
+  width: 400px;
+  height: 500px;
+}
+
+.pzBoard {
+  border: 2px solid #404040;
+  box-sizing: border-box;
+}
+
+.pzSquare {
+  float: left;
+  position: relative;
+  /* disable any native browser highlighting */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.pzDarkSquare {
+  background-color: #b58863;
+  color: #f0d9b5;
+}
+
+.pzLightSquare {
+  background-color: #f0d9b5;
+  color: #b58863;
+}
+
+.pzDarkSquareGrey {
+  background-color: #110c08;
+  color: #8a5f1c;
+}
+
+.pzLightSquareGrey {
+  background-color: #8a5f1c;
+  color: #110c08;
+}
+
+.pzClearfix {
+  clear: both;
+}
+
+.pzNotation {
+  cursor: default;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: div(400px, 30);
+  position: absolute;
+}
+
+.pzAlpha {
+  bottom: 1px;
+  right: 3px;
+}
+
+.pzNumeric {
+  top: 2px;
+  left: 2px;
+}
+
+.pzHighlightSquare {
+  box-shadow: inset 0 0 3px 3px yellow;
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(1.1);
+  transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
+
+.modal-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 1rem 1.5rem;
+  width: 110px;
+  border-radius: 0.5rem;
+}
+
+.show-modal {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
+  display: block;
+}
