--- a/PonzianiComponents/_style.scss
+++ b/PonzianiComponents/_style.scss
@@ -1,4 +1,4 @@
-﻿/* Settings relevant for Chessboard component*/
+﻿//Settings relevant for Chessboard component
 
 //Color of dark squares
 $DarkSquaresColor: #b58863;
@@ -18,7 +18,7 @@ $Size: 400px;
 //Color, with which squares are highlighted
 $HighlightColor: yellow;
 
-/* Settings relevant for Scoresheet component*/
+//Settings relevant for Scoresheet component
 
 //Color for Comments in Movetext
 $MoveTextCommentColor: blue;
